public/css/style.css
@font-face {
    font-family: 'Wellfleet';
    src: url(../fonts/Wellfleet-Regular.ttf);
}

@font-face {
    font-family: 'Lato-Regular';
    src: url(../fonts/Lato-Regular.ttf);
}

@font-face {
    font-family: 'Lato-Light';
    src: url(../fonts/Lato-Light.ttf);
}

footer p {
    font-size: 18px;
}

span.card-title#question_text {
    font-size: 20px;
}

.card .card-content {
    padding-bottom: 5px;
}

.card {
    word-wrap: break-word;
}

footer.transparent {
    margin-top: -30px;
    background-color: rgba(0, 0, 0, 0) !important;
}

form a.btn-large, .row .col.s6 button.btn-large {
    width: 100%;
}

#question_select .btn {
    padding-left: 6px;
    padding-right: 6px;
    padding-bottom: 6px;
    margin-right: 4px;
    margin-bottom: 4px;
    height: 30px;
    width: 30px;
    border-width: 10px;
    border-color: red;
    /* border-radius: 20%; */
}

#score {
    font-size: 25px;
}

#grade {
    font-size: 30px;
}

#question_section input[type=checkbox][id^=option_]:checked + label:after {
    border: 2px solid #2196F3 !important;
    background-color: #2196F3 !important;
}

body {
    font-family: Lato-Regular;
    color: #656565;
    background-size: contain;
    padding-top: 20px;
    padding-bottom: 20px;
}

.card.news .card-content {
	padding-top: 45px;
}

.material-icons.mode_edit {
    color: #2196F3 !important;
}

td.key span {
    margin-left: 35px;
    font-weight: bold;
}

td.key i.material-icons {
    padding-right: 10px;
    position: absolute;
    font-size: 20px;
}

.card.notifications .card-image i.material-icons {
    padding-right: 20px;
}

.card.notifications .card-image td {
    color: #3f51b5;
}

.card.other-info .card-image i.material-icons {
    padding-right: 20px;
}

td.key {
    font-weight: bold;
    padding-top: 5px;
    padding-bottom: 5px;
    margin-bottom: 10px !important;
}

td.heading {
    font-weight: bold;;
    font-size: 24px;
    padding-left: 25px;
}

td.value {
    font-weight: normal;
}

.material-icons.large {
    font-size: 40px;
    font-weight: lighter;
}

body {
    background-image: url(../images/bg.png) !important
}

.container > .card {
    box-shadow: 0 0 7px #9eccd8;
}

body > .container.home {
    box-shadow: 0 0 7px black;
    padding: 0 15px 0 15px;
}

.tile .span.tile-title {
    font-size: 30px;
    vertical-align: middle;
    text-align: center;
    font-family: 'Wellfleet';
}

.tile {
    height: 33% !important;
    max-height: 33% !important;
}

.tile:hover {
    cursor: pointer;
}

.row.tiles div[class^="col-"], div[class*=" col-"] {
    padding: 0;
}

img.d-block {
    display: block;
    margin-left: auto;
    margin-right: auto;
}

form {
    margin-top: 30px;
    border-radius: 5px;
    border-color: teal;
    box-shadow: 0 0 7px #808088;
    padding: 30px 15px 1px 15px;
    width: 85%;
    display: block;
    margin-left: auto;
    margin-right: auto;
    background-color: white;
}

/*
.input-field label {
    color: skyblue;
}

.input-field input[type=text]:focus + label {
    color: skyblue;
}

.input-field input[type=text]:focus {
    border-bottom: 1px solid skyblue;
    box-shadow: 0 1px 0 0 #000;
}

.input-field input[type=text].valid {
    border-bottom: 1px solid skyblue;
    box-shadow: 0 1px 0 0 #000;
}

.input-field input[type=text].invalid {
    border-bottom: 1px solid skyblue;
    box-shadow: 0 1px 0 0 #000;
}

.input-field .prefix-active {
    color: skyblue;
}
*/

.notifications .col.s11 {
    font-size: 16px;
}

ul.dropdown-content li span {
    color: skyblue;
}

.input-field input[type=text]:focus + label, .input-field input[type=password]:focus + label {
    color: skyblue;
}

.input-field input[type=text].valid, .input-field input[type=password].valid {
    border-bottom: none;
    box-shadow: 0 1px 0 0 #888;
}

.input-field input[type=text].invalid, .input-field input[type=password].invalid {
    border-bottom: 1px solid rgba(255, 0, 0, 0.64);
    box-shadow: 0 1px 0 0 rgba(255, 0, 0, 0.64);
}

.input-field input[type=text]:focus, .input-field input[type=password]:focus {
    border-bottom: 1px solid skyblue;
    box-shadow: 0 1px 0 0 skyblue;
}

button[type='submit'] {
    padding-left: 30px;
    padding-right: 30px;
}

@font-face {
    font-family: 'Material Icons';
    font-style: normal;
    font-weight: 400;
    src: local('Material Icons'), local('MaterialIcons-Regular'), url(../fonts/material_icons.woff2) format('woff2');
}

.material-icons {
    font-family: 'Material Icons';
    font-weight: normal;
    font-style: normal;
    font-size: 24px;
    line-height: 1;
    letter-spacing: normal;
    text-transform: none;
    display: inline-block;
    white-space: nowrap;
    word-wrap: normal;
    direction: ltr;
    -webkit-font-feature-settings: 'liga';
    -webkit-font-smoothing: antialiased;
}

.btn-small {
    height: 24px;
    line-height: 24px;
    padding: 0 0.5rem;
    margin-bottom: 10px;
    font-size: 13px !important;
    text-transform: none !important;
}

